--- a/.pullapprove.yml
+++ b/.pullapprove.yml
@@ -25,7 +25,7 @@ reviewers:
     name: gui-devs
     required: 1
     members:
-      - Labrys
+      - labrys
       - OmgImAlexis
       - p0psicles
 # # CONDITIONS REQUIRE PRO ACCOUNT
