Updating guessit to 2.1.0.dev0: 67b8ac712cb28af6b2e31a8b11a47735b65d59c4

--- a/lib/guessit/test/episodes.yml
+++ b/lib/guessit/test/episodes.yml
@@ -1844,3 +1844,14 @@
   language: hu
   release_group: nIk
   type: episode
+
+? Game.of.Thrones.S6.Ep5.X265.Dolby.2.0.KTM3.mp4
+: audio_channels: '2.0'
+  audio_codec: DolbyDigital
+  container: mp4
+  episode: 5
+  release_group: KTM3
+  season: 6
+  title: Game of Thrones
+  type: episode
+  video_codec: h265
