--- a/lib/guessit/test/various.yml
+++ b/lib/guessit/test/various.yml
@@ -750,3 +750,22 @@
   type: movie
   video_codec: h264
   year: 2002
+
+? Peep.Show.S06E02.DVDrip.x264-faks86.mkv
+: container: mkv
+  episode: 2
+  format: DVD
+  release_group: faks86
+  season: 6
+  title: Peep Show
+  type: episode
+  video_codec: h264
+
+? The Soup - 11x41 - October 8, 2014.mp4
+: container: mp4
+  episode: 41
+  episode_title: October 8
+  season: 11
+  title: The Soup
+  type: episode
+  year: 2014
