Escaping show names when creating guessit expected_titles list

--- a/tests/datasets/tvshows.yml
+++ b/tests/datasets/tvshows.yml
@@ -2777,3 +2777,10 @@
   container: mkv
   mimetype: video/x-matroska
   type: episode
+
+# Show name with number
+? R-15.S03E04
+: title: R-15
+  season: 3
+  episode: 4
+  type: episode
