--- a/tests/datasets/tvshows.yml
+++ b/tests/datasets/tvshows.yml
@@ -2767,7 +2767,7 @@
   release_group: GROUP
   type: episode
 
-# Anime show containing number in its title
+# Anime show containing number in its title and show with :
 ? "[GROUP].Mobile.Suit.Gundam.Unicorn.RE.0096.-.14.[720p].mkv"
 : title: Mobile Suit Gundam Unicorn RE 0096
   absolute_episode: 14
@@ -2776,6 +2776,14 @@
   release_group: GROUP
   container: mkv
   mimetype: video/x-matroska
+  type: episode
+
+# Anime show containing number in its title and show with :
+? /Anime/Mobile Suit Gundam UC RE0096/Season 01/Mobile Suit Gundam UC RE0096 - s01e15 - Title
+: title: Mobile Suit Gundam UC RE0096
+  season: 1
+  episode: 15
+  episode_title: Title
   type: episode
 
 # Show name with number
@@ -2790,4 +2798,21 @@
 : title: The Someone's Show 2
   season: 5
   episode: 7
+  type: episode
+
+# Show name with numbers and a single quote but filename without it:
+? The.Someones.Show.**.2.**.S05E07
+: title: The Someones Show 2
+  season: 5
+  episode: 7
+  type: episode
+
+# Regression test for https://github.com/pymedusa/SickRage/pull/812#issuecomment-235824102
+# Case: Expected title + 2 file parts and the second one starts with a word separator (dot)
+? 11.22.63./.11.22.63.[S01].(2016).HDTVRip.|.Group
+: title: 11.22.63
+  season: 1
+  year: 2016
+  format: HDTV
+  release_group: Group
   type: episode
