Changing to pytest with flake8 to have PEP8, PEP257 checks and better tests

--- a/tox.ini
+++ b/tox.ini
@@ -7,12 +7,14 @@ passenv = TRAVIS TRAVIS_JOB_ID TRAVIS_BRANCH
 envdir = {toxworkdir}/tox
 deps =
     coveralls
+    flake8_docstrings
+    pytest
+    pytest-cov
+    pytest-flake8
     PyYAML
-    nose
-    nose-parameterized
-    rednose
     mock
+    nose_parameterized
 
 commands =
-    nosetests -c nose.cfg
+    py.test {posargs}
     - coveralls
