Updating guessit to 2.1.0-dev 66fe4cee6039d97c5433a82bc8e3e49f1f147768

--- a/lib/guessit/test/various.yml
+++ b/lib/guessit/test/various.yml
@@ -769,3 +769,32 @@
   title: The Soup
   type: episode
   year: 2014
+
+? Red.Rock.S02E59.WEB-DLx264-JIVE
+: episode: 59
+  season: 2
+  format: WEB-DL
+  release_group: JIVE
+  title: Red Rock
+  type: episode
+  video_codec: h264
+
+? Pawn.Stars.S12E31.Deals.On.Wheels.PDTVx264-JIVE
+: episode: 31
+  episode_title: Deals On Wheels
+  season: 12
+  format: DVB
+  release_group: JIVE
+  title: Pawn Stars
+  type: episode
+  video_codec: h264
+
+? Duck.Dynasty.S09E09.Van.He-llsing.HDTVx264-JIVE
+: episode: 9
+  episode_title: Van He-llsing
+  season: 9
+  format: HDTV
+  release_group: JIVE
+  title: Duck Dynasty
+  type: episode
+  video_codec: h264
