Fix lint issues

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,11 +1,7 @@
 [pytest]
 norecursedirs = .build .cache .eggs .tox cache contrib lib
-python_files=*test*.py
-addopts = --cov=sickbeard --cov=sickrage --flake8
-flake8-import-order-style = cryptography
-flake8-application-import-names = 
-    sickbeard
-    sickrage
+python_files = *test*.py
+addopts = --flake8
 flake8-max-line-length = 120
 flake8-ignore =
     setup.py D200 D400
@@ -59,12 +55,8 @@ flake8-ignore =
     sickbeard/metadata/tivo.py D100 D102 D202 D205 D400 D401 E501 I100 I101
     sickbeard/metadata/wdtv.py D100 D102 D202 D205 D400 D401 F401 F823 I100 I101
     sickbeard/name_cache.py D100 D200 D400 D401 E501 I100 I101
-    sickbeard/name_parser/guessit_parser.py D400 I100
     sickbeard/name_parser/parser.py D100 D101 D102 D105 D202 D205 D208 D400 D401 E126 E222 E501 I100 I101
     sickbeard/name_parser/regexes.py D100 E501
-    sickbeard/name_parser/rules/__init__.py I101
-    sickbeard/name_parser/rules/properties.py E302 F401 I101
-    sickbeard/name_parser/rules/rules.py E251 I101
     sickbeard/naming.py D100 D101 D102 D103 D205 D400 D401 E501 I100 I101
     sickbeard/network_timezones.py D100 D103 D200 D202 D400 E501 I100
     sickbeard/notifiers/boxcar2.py D100 D101 D102 D202 D400 D401 E225 E501 I101
@@ -236,24 +228,24 @@ flake8-ignore =
     sickrage/system/Shutdown.py D100 D101 D102
     sickrage/tagger/episode.py D102 D200 D204 D205 D400 I100 W291 W293
     sickrage/tagger/__init__.py D104
-    tests/api_v1_tests.py D101 D102 D200 D204 D205 D400
+    tests/*.py D101 D102 D103
+    tests/api_v1_tests.py D200 D204 D205 D400
     tests/common_tests.py D200 D204 D400 E402
     tests/config_tests.py D200 D204 D400 E402 E501 I100
     tests/db_tests.py D200 D204 D400 E402
     tests/encoding_tests.py D100 D200 D204 D400 E402 I100
     tests/exceptions_helper_tests.py D200 D205 D400 E402 E501
     tests/feedparser_tests.py D100 D200 D204 D400 E402
-    tests/guessit_tests.py E121 E126 I100
     tests/helpers_tests.py D200 D204 D205 D400 E402
     tests/__init__.py D104
     tests/issue_submitter_tests.py D100 D200 D204 D400 E402 I101
-    tests/name_parser_tests.py D101 D102 D200 D202 D204 D400 D401 E402 E501
-    tests/notifier_tests.py D102 D200 D204 D400 E402 E501 I100
+    tests/name_parser_tests.py D200 D202 D204 D400 D401 E402 E501 I100
+    tests/notifier_tests.py D200 D204 D400 E402 E501 I100
     tests/numdict_tests.py D200 D204 D400 D403 E402 E501 F841 I100
     tests/pp_tests.py D100 D200 D204 D400 E402 I100
-    tests/scene_helpers_tests.py D200 D204 D205 D400 E402 E501 I101
-    tests/search_tests.py D100 D102 D200 D202 D204 D400 E402 I100
-    tests/sickrage_tests/helper/common_tests.py D102 D200 D400 E402 E501 I100 I101
+    tests/scene_helpers_tests.py D200 D204 D205 D400 E402 E501 I100 I101
+    tests/search_tests.py D100 D200 D202 D204 D400 E402 I100
+    tests/sickrage_tests/helper/common_tests.py D200 D400 E402 E501 I100 I101
     tests/sickrage_tests/helper/__init__.py D200 D400
     tests/sickrage_tests/helper/quality_tests.py D200 D204 D400 E402 I100
     tests/sickrage_tests/__init__.py D200 D400 I100
@@ -270,14 +262,14 @@ flake8-ignore =
     tests/sickrage_tests/show/coming_episodes_tests.py D200 D204 D400 E402 E501 I100
     tests/sickrage_tests/show/history_tests.py D200 D204 D400 E402 I100
     tests/sickrage_tests/show/__init__.py D200 D400
-    tests/sickrage_tests/show/show_tests.py D102 D200 D400 E402 E501 I100
+    tests/sickrage_tests/show/show_tests.py D200 D400 E402 E501 I100
     tests/sickrage_tests/system/__init__.py D200 D400
     tests/sickrage_tests/system/restart_tests.py D200 D204 D400 E402 I100
     tests/sickrage_tests/system/shutdown_tests.py D200 D204 D400 E402 I100
     tests/snatch_tests.py D200 D202 D400 E402 E501 F841 I100
-    tests/ssl_sni_tests.py D100 D101 D205 D400 E402 I100
-    tests/test_lib.py D102 D200 D204 E402 E501 F841 I100
-    tests/test_subtitles.py D100 D103 I100
-    tests/torrent_tests.py D100 D102 D200 D204 D400 E402 E501 F841 I100
+    tests/ssl_sni_tests.py D100 D205 D400 E402 I100
+    tests/test_lib.py D200 D204 E402 E501 F841 I100
+    tests/test_subtitles.py D100 I100
+    tests/torrent_tests.py D100 D200 D204 D400 E402 E501 F841 I100
     tests/tv_tests.py D200 D204 D400 D403 E402 I100
     tests/xem_tests.py D200 D202 D400 D401 E402 I100
