--- a/tox.ini
+++ b/tox.ini
@@ -14,8 +14,11 @@ deps =
     pytest-flake8
     PyYAML
     mock
-    nose_parameterized
 
 commands =
-    py.test {posargs}
+    py.test --cov=sickbeard --cov=sickrage {posargs}
     - coveralls
+
+[flake8]
+import-order-style = cryptography
+application-import-names = sickbeard,sickrage
